hphp/test/zend/good/Zend/tests/magic_by_ref_007.php.expectf

Fatal error: Method test::__call() cannot take inout arguments in %s/magic_by_ref_007.php on line 4
